--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       Click to Play<br />
       WASD to Move, Mouse to Look
     </div>
+    <div id="blood-flash"></div>
+    <div id="damage-numbers"></div>
   </div>
   <div id="hud">
     <div id="portrait">
