--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="stat">HP: <span id="hp-val">100</span></div>
       <div class="stat">STR: <span id="str-val">10</span></div>
       <div class="stat">DEF: <span id="def-val">5</span></div>
+      <div class="stat">GOLD: <span id="gold-val">0</span></div>
     </div>
     <div id="inventory">
       <div id="equipment">
