--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <div class="stat">STR: <span id="str-val">10</span></div>
       <div class="stat">DEF: <span id="def-val">5</span></div>
       <div class="stat">GOLD: <span id="gold-val">0</span></div>
+      <div class="stat">XP: <span id="xp-val">0</span></div>
     </div>
     <div id="inventory">
       <div id="equipment">
