--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img id="char-portrait" src="" alt="Portrait" />
     </div>
     <div id="attributes">
-      <div class="stat">HP: <span id="hp-val">100</span></div>
+      <div class="stat">HP: <span id="hp-val">100</span> / <span id="hp-max">100</span></div>
       <div class="stat">LVL: <span id="lvl-val">1</span></div>
       <div class="stat">STR: <span id="str-val">10</span></div>
       <div class="stat">DEF: <span id="def-val">5</span></div>
