level 4 and 5 added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <div id="blood-flash"></div>
     <div id="damage-numbers"></div>
+    <div id="floor-indicator">FLOOR: <span id="floor-val">1</span></div>
     <div id="game-over" class="overlay">
       <h1>GAME OVER</h1>
       <button onclick="location.reload()">Restart</button>
