superior sword added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="blood-flash"></div>
     <div id="damage-numbers"></div>
     <div id="floor-indicator">FLOOR: <span id="floor-val">1</span></div>
+    <button id="sound-toggle" title="Toggle Sound">🔊</button>
     <div id="game-over" class="overlay">
       <h1>GAME OVER</h1>
       <button onclick="location.reload()">Restart</button>
