life less 25% effect

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       WASD to Move, Mouse to Look
     </div>
     <div id="blood-flash"></div>
+    <div id="low-hp-glow"></div>
     <div id="damage-numbers"></div>
     <div id="floor-indicator">FLOOR: <span id="floor-val">1</span></div>
     <button id="sound-toggle" title="Toggle Sound">🔊</button>
