knight sle, god mod, HUD rewamped

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     <div id="portrait">
       <img id="char-portrait" src="" alt="Portrait" />
     </div>
+    <div id="buff-bar">
+      <!-- Buff icons will be injected here -->
+      <div id="buff-god-mode" class="buff-icon" style="display: none;" title="God Mode Active"></div>
+    </div>
     <div id="attributes">
       <div class="stat">HP: <span id="hp-val">100</span> / <span id="hp-max">100</span></div>
       <div class="stat">LVL: <span id="lvl-val">1</span></div>
