--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       </div>
     </div>
   </div>
+  <div id="tooltip" class="hidden"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
