rat and plague added

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div id="buff-bar">
       <!-- Buff icons will be injected here -->
       <div id="buff-god-mode" class="buff-icon" style="display: none;" title="God Mode Active"></div>
+      <div id="buff-plague" class="buff-icon debuff" style="display: none;" title="Plague Active"></div>
     </div>
     <div id="attributes">
       <div class="stat">HP: <span id="hp-val">100</span> / <span id="hp-max">100</span></div>
