--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <button id="sound-toggle" title="Toggle Sound">🔊</button>
     <div id="game-over" class="overlay">
       <h1>GAME OVER</h1>
-      <button onclick="location.reload()">Restart</button>
+      <div class="button-row">
+        <button onclick="location.reload()">New Game</button>
+        <button id="respawn-btn" style="display: none;">Respawn</button>
+      </div>
     </div>
     <div id="victory" class="overlay">
       <h1>VICTORY</h1>
