boots and shoulders added

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
           <div class="slot" id="slot-head" title="Head"></div>
         </div>
         <div class="slot-row torso-row">
-          <div class="slot" id="slot-l-arm" title="Left Arm"></div>
+          <div class="slot" id="slot-shoulder" title="Shoulder"></div>
           <div class="slot" id="slot-torso" title="Torso"></div>
-          <div class="slot" id="slot-r-arm" title="Right Arm"></div>
+          <div class="empty-slot"></div>
         </div>
         <div class="slot-row arm-row">
           <div class="slot" id="slot-l-hand" title="Left Hand"></div>
