fixed local storage issue

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <div id="game-over" class="overlay">
       <h1>GAME OVER</h1>
       <div class="button-row">
-        <button onclick="location.reload()">New Game</button>
+        <button id="new-game-btn">New Game</button>
         <button id="respawn-btn" style="display: none;">Respawn</button>
       </div>
     </div>
     <div id="victory" class="overlay">
       <h1>VICTORY</h1>
       <p>You have escaped the labyrinth!</p>
-      <button onclick="location.reload()">Play Again</button>
+      <button id="play-again-btn">Play Again</button>
     </div>
 
     <div id="vendor-overlay" class="overlay">
