splash screen added

--- a/index.html
+++ b/index.html
@@ -57,8 +57,17 @@
       </div>
       <p>Hit 'M' to return</p>
     </div>
+
+    <div id="splash-screen" class="overlay" style="display: flex;">
+      <h1>3D DUNGEON</h1>
+      <div class="button-column">
+        <button id="start-game-btn">START</button>
+        <button id="spawn-game-btn">SPAWN</button>
+        <button id="remove-spawn-btn">REMOVE SPAWN</button>
+      </div>
+    </div>
   </div>
-  <div id="hud">
+  <div id="hud" style="display: none;">
     <div id="portrait">
       <img id="char-portrait" src="" alt="Portrait" />
     </div>
