glowing effect when power attack resets

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="blood-flash"></div>
     <div id="low-hp-glow"></div>
     <div id="damage-numbers"></div>
+    <div id="power-ready-glow"></div>
     <div id="floor-indicator">FLOOR: <span id="floor-val">1</span></div>
     <div id="minimap-container">
       <canvas id="minimap-canvas" width="150" height="150"></canvas>
