--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>3D Dungeon Labyrinth</title>
+  <title>Kaerith's Labyrinth</title>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
     </div>
 
     <div id="splash-screen" class="overlay" style="display: flex;">
-      <h1>3D DUNGEON</h1>
+      <h1>KAERITH'S LABYRINTH</h1>
       <div class="button-column">
         <button id="start-game-btn">START</button>
         <button id="spawn-game-btn">SPAWN</button>
