--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   <div id="game-container">
     <div id="instructions">
       Click to Play<br />
-      WASD to Move, Mouse to Look
+      WASD to Move, Mouse to Look<br />
+      Left click to attack<br />
+      Right click to use a power attack<br />
+      T to teleport to vendor<br />
+      M to Open Map<br />
+      Esc to Exit
     </div>
     <div id="blood-flash"></div>
     <div id="low-hp-glow"></div>
