add message Release the mouse

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Right click to use a power attack<br />
       T to teleport to vendor<br />
       M to Open Map<br />
-      Esc to Exit
+      Esc to Exit (Release the mouse)
     </div>
     <div id="blood-flash"></div>
     <div id="low-hp-glow"></div>
