first version of the map generator

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
         <button id="start-game-btn">START</button>
         <button id="spawn-game-btn">SPAWN</button>
         <button id="remove-spawn-btn">REMOVE SPAWN</button>
+        <a href="editor/index.html" target="_blank" style="text-decoration: none;">
+          <button id="editor-btn" style="width: 100%; margin-top: 10px; background: #475569;">LEVEL EDITOR</button>
+        </a>
       </div>
     </div>
   </div>
